# infra-cli-tooling

./: README.md
m2m/: README.md  pyproject.toml
m2m/cli/: console.py  m2m.py
